--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "axios-jsonp": "^1.0.4",
+    "js-base64": "^3.6.0",
     "next": "^10.0.0",
+    "node-fetch": "^2.6.1",
+    "prettier": "^2.2.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.3",
+    "swr": "^0.5.5"
   }
 }
