--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "react-dom": "17.0.1",
     "styled-components": "^5.2.3",
     "swr": "^0.5.5"
+  },
+  "devDependencies": {
+    "@types/node": "^15.0.1",
+    "@types/react": "^17.0.4",
+    "typescript": "^4.2.4"
   }
 }
