--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "axios-jsonp": "^1.0.4",
+    "dotenv-webpack": "^7.0.2",
     "js-base64": "^3.6.0",
     "next": "^10.0.0",
     "node-fetch": "^2.6.1",
